Temp fix for layout issue in Firefox
Carousel display bug in firefox workaround

--- a/public/styles/_global.scss
+++ b/public/styles/_global.scss
@@ -70,7 +70,6 @@ a {
   top: 0;
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
-  overflow: hidden;
 }
 
 nav {
