--- a/public/styles/_portfolio.scss
+++ b/public/styles/_portfolio.scss
@@ -41,6 +41,7 @@
     width: 100%;
     height: 500px;
     img {
+        padding: 0 10%;
         object-fit: contain;
         width: 100%;
         height: auto;
